[SQONE-270]: Correct logo alignment, Handle edge cases and a11y.

--- a/wp-content/themes/core/components/navigation/css/legal.pcss
+++ b/wp-content/themes/core/components/navigation/css/legal.pcss
@@ -37,3 +37,15 @@
 		margin-bottom: 0;
 	}
 }
+
+/* -----------------------------------------------------------------------------
+ * Legal Nav: Link
+ * ----------------------------------------------------------------------------- */
+
+.c-nav-legal__action {
+	text-decoration: underline transparent;
+
+	&:hover {
+		text-decoration-color: currentColor;
+	}
+}
