--- a/wp-content/themes/core/components/navigation/css/site-footer.pcss
+++ b/wp-content/themes/core/components/navigation/css/site-footer.pcss
@@ -45,3 +45,15 @@
 		margin-top: var(--spacer-20);
 	}
 }
+
+/* -----------------------------------------------------------------------------
+ * Site Footer Nav: Link
+ * ----------------------------------------------------------------------------- */
+
+.c-nav-footer__action {
+	text-decoration: underline transparent;
+
+	&:hover {
+		text-decoration-color: currentColor;
+	}
+}
