--- a/wp-content/themes/core/components/site_footer/css/site-footer.pcss
+++ b/wp-content/themes/core/components/site_footer/css/site-footer.pcss
@@ -43,7 +43,11 @@
  * ----------------------------------------------------------------------------- */
 
 .c-site-footer__description {
+	@mixin t-input;
+
 	margin-top: var(--spacer-20);
+	font-size: 18px;
+	line-height: 1.75;
 }
 
 /* -----------------------------------------------------------------------------
@@ -51,7 +55,11 @@
  * ----------------------------------------------------------------------------- */
 
 .c-site-footer__nav {
-	margin-top: var(--spacer-60)
+	margin-top: var(--spacer-60);
+
+	@media (--viewport-full) {
+		margin-top: var(--spacer-20);
+	}
 }
 
 /* -----------------------------------------------------------------------------
